# samvaad_sathi_backend

./: .gitignore  pyproject.toml  pyrightconfig.json  restart-python-server.sh  simple_resume.txt  test_imports.py  test_resume.txt  uv.sh
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
backend/: .env.example  .gitignore  TEMPLATE_README.md  docker-compose.local.yml  docker-compose.yaml
backend/backend/: .dockerignore  ANALYSIS_UPDATES.md  AUDIO_TRANSCRIPTION.md  DATABASE_PERSISTENCE.md  Dockerfile  PROGRESSIVE_CURL_EXAMPLES.sh  README.md  SECTION_BY_SECTION_TEST_RESULTS.md  STRUCTURE_PRACTICE_API.md  check_answers_db.py  docker-compose.yml  quick_analysis_test.sh  quick_test.py  requirements.txt  temp.json  test_analysis.sh  test_analysis_complete.sh  test_analysis_python.py  test_section_by_section.sh  test_structure_practice_curl.sh
backend/backend/assets/: sample_resume.txt
backend/backend/postman/: HR_Non_Tech_Blueprint_Demo.postman_collection.json
backend/backend/scripts/: check_aurora_state.py  check_supabase_state.py  create_aurora_db.py  create_supabase_db.py  db_manager.py  revert_supplement_migration.py  run_all_smoke.py  smoke_analytics.py  smoke_golden_path.py  smoke_misc.py  smoke_non_tech_jobs.py  smoke_pacing_practice.py  smoke_pronunciation.py  smoke_reattempt.py  smoke_security.py  smoke_structure_practice.py  smoke_test.py  smoke_tts.py  smoke_utils.py  smoke_v2_follow_up.py  test_db_persistence.py  test_resume_upload.py  test_structure_practice_optional.py
backend/backend/src/: main.py
backend/backend/src/api/: endpoints.py
backend/backend/src/data/: pacing_practice_prompts.json  pronunciation_words.json
backend/backend/src/repository/: aurora_database.py  base.py  database.py  events.py  supabase_database.py
backend/backend/src/services/: README_SYLLABUS_REFACTOR.md  analysis.py  analytics.py  analytics_events.py  audio_processor.py  elevenlabs_tts.py  follow_up.py  llm.py  non_tech_blueprint.py  pace_analysis.py  pacing_practice_service.py  pause_analysis.py  progressive_hints.py  pronunciation_tts.py  question_supplements.py  report.py  static_questions.py  structure_analysis.py  structure_hints.py  summary_report.py  summary_report_v2.py  syllabus.py  syllabus_content.py  syllabus_data.py  syllabus_examples.py  syllabus_service.py  whisper.py
backend/backend/tests/integration_tests/: test_analytics_v2_contracts.py
backend/docs/: DEV_GUIDE.md  architecture.html  architecture.md  component_architecture.mmd  data_architecture.mmd  data_architecture_and_training.md  system_context.mmd
(+85 files in other folders)
